--- a/src/output.css
+++ b/src/output.css
@@ -600,8 +600,8 @@ video {
   top: 0px;
 }
 
-.-end-full {
-  inset-inline-end: -100%;
+.end-0 {
+  inset-inline-end: 0px;
 }
 
 .z-10 {
@@ -617,12 +617,30 @@ video {
   margin-right: auto;
 }
 
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .flex {
@@ -633,6 +651,10 @@ video {
   display: grid;
 }
 
+.h-1\/2 {
+  height: 50%;
+}
+
 .h-1\/4 {
   height: 25%;
 }
@@ -641,44 +663,120 @@ video {
   height: 16rem;
 }
 
+.h-96 {
+  height: 24rem;
+}
+
 .h-full {
   height: 100%;
 }
 
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-1\/3 {
-  height: 33.333333%;
-}
-
-.h-72 {
-  height: 18rem;
+.h-3\.5 {
+  height: 0.875rem;
 }
 
 .h-auto {
   height: auto;
 }
 
-.h-60 {
-  height: 15rem;
+.h-\[200px\] {
+  height: 200px;
 }
 
-.h-56 {
-  height: 14rem;
+.h-\[1000px\] {
+  height: 1000px;
 }
 
-.h-52 {
-  height: 13rem;
+.h-\[1500px\] {
+  height: 1500px;
 }
 
-.h-1 {
-  height: 0.25rem;
+.h-\[1100px\] {
+  height: 1100px;
 }
 
-.h-96 {
-  height: 24rem;
+.h-\[1200px\] {
+  height: 1200px;
+}
+
+.h-\[1300px\] {
+  height: 1300px;
+}
+
+.h-\[1400px\] {
+  height: 1400px;
+}
+
+.h-\[1499px\] {
+  height: 1499px;
+}
+
+.h-\[1450px\] {
+  height: 1450px;
+}
+
+.h-\[1600px\] {
+  height: 1600px;
+}
+
+.h-\[900px\] {
+  height: 900px;
+}
+
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[600px\] {
+  height: 600px;
+}
+
+.h-\[550px\] {
+  height: 550px;
+}
+
+.h-\[560px\] {
+  height: 560px;
+}
+
+.h-\[570px\] {
+  height: 570px;
+}
+
+.h-\[570x\] {
+  height: 570x;
+}
+
+.h-\[670x\] {
+  height: 670x;
+}
+
+.h-\[700px\] {
+  height: 700px;
+}
+
+.h-\[650px\] {
+  height: 650px;
+}
+
+.h-\[640px\] {
+  height: 640px;
+}
+
+.h-\[800px\] {
+  height: 800px;
+}
+
+.h-\[580px\] {
+  height: 580px;
+}
+
+.h-\[575px\] {
+  height: 575px;
+}
+
+.h-\[30vh\] {
+  height: 30vh;
 }
 
 .w-1\/2 {
@@ -705,6 +803,10 @@ video {
   flex-basis: 25%;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -715,6 +817,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .place-content-stretch {
@@ -755,6 +861,12 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -767,9 +879,18 @@ video {
   border-right-width: 1px;
 }
 
+.border-t-2 {
+  border-top-width: 2px;
+}
+
 .border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity, 1));
 }
 
 .bg-gray-600 {
@@ -791,14 +912,14 @@ video {
   background-color: rgb(250 250 250 / var(--tw-bg-opacity, 1));
 }
 
+.bg-zinc-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.object-scale-down {
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
 }
 
 .object-top {
@@ -812,6 +933,10 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .px-3 {
@@ -845,6 +970,16 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -902,6 +1037,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -939,6 +1079,26 @@ video {
 .hover\:text-slate-900:hover {
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-blue-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-blue-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-blue-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-pink-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(236 72 153 / var(--tw-text-opacity, 1));
 }
 
 .focus\:outline-none:focus {
