--- a/src/output.css
+++ b/src/output.css
@@ -576,6 +576,10 @@ video {
   }
 }
 
+.static {
+  position: static;
+}
+
 .fixed {
   position: fixed;
 }
@@ -779,6 +783,26 @@ video {
   height: 30vh;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-\[140px\] {
+  height: 140px;
+}
+
+.h-\[240px\] {
+  height: 240px;
+}
+
+.h-\[535px\] {
+  height: 535px;
+}
+
+.h-\[540px\] {
+  height: 540px;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -797,6 +821,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .basis-1\/4 {
