--- a/src/output.css
+++ b/src/output.css
@@ -584,12 +584,8 @@ video {
   position: fixed;
 }
 
-.absolute {
-  position: absolute;
-}
-
-.inset-0 {
-  inset: 0px;
+.relative {
+  position: relative;
 }
 
 .bottom-0 {
@@ -604,8 +600,12 @@ video {
   top: 0px;
 }
 
-.end-0 {
-  inset-inline-end: 0px;
+.top-\[50px\] {
+  top: 50px;
+}
+
+.top-\[64px\] {
+  top: 64px;
 }
 
 .z-10 {
@@ -614,11 +614,6 @@ video {
 
 .z-20 {
   z-index: 20;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .my-6 {
@@ -639,10 +634,6 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
 .mb-8 {
   margin-bottom: 2rem;
 }
@@ -655,156 +646,116 @@ video {
   display: grid;
 }
 
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-1\/4 {
-  height: 25%;
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-64 {
   height: 16rem;
 }
 
-.h-96 {
-  height: 24rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-3\.5 {
-  height: 0.875rem;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-\[200px\] {
-  height: 200px;
-}
-
-.h-\[1000px\] {
-  height: 1000px;
-}
-
-.h-\[1500px\] {
-  height: 1500px;
-}
-
-.h-\[1100px\] {
-  height: 1100px;
-}
-
-.h-\[1200px\] {
-  height: 1200px;
-}
-
-.h-\[1300px\] {
-  height: 1300px;
-}
-
-.h-\[1400px\] {
-  height: 1400px;
-}
-
-.h-\[1499px\] {
-  height: 1499px;
-}
-
-.h-\[1450px\] {
-  height: 1450px;
-}
-
-.h-\[1600px\] {
-  height: 1600px;
-}
-
-.h-\[900px\] {
-  height: 900px;
-}
-
-.h-\[500px\] {
-  height: 500px;
-}
-
-.h-\[600px\] {
-  height: 600px;
-}
-
-.h-\[550px\] {
-  height: 550px;
-}
-
-.h-\[560px\] {
-  height: 560px;
-}
-
-.h-\[570px\] {
-  height: 570px;
-}
-
-.h-\[570x\] {
-  height: 570x;
-}
-
-.h-\[670x\] {
-  height: 670x;
-}
-
-.h-\[700px\] {
-  height: 700px;
-}
-
-.h-\[650px\] {
-  height: 650px;
-}
-
-.h-\[640px\] {
-  height: 640px;
-}
-
-.h-\[800px\] {
-  height: 800px;
-}
-
-.h-\[580px\] {
-  height: 580px;
+.h-\[540px\] {
+  height: 540px;
 }
 
 .h-\[575px\] {
   height: 575px;
 }
 
-.h-\[30vh\] {
-  height: 30vh;
+.h-auto {
+  height: auto;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-full {
+  height: 100%;
 }
 
-.h-\[140px\] {
-  height: 140px;
+.h-\[640px\] {
+  height: 640px;
 }
 
-.h-\[240px\] {
-  height: 240px;
+.h-\[740px\] {
+  height: 740px;
 }
 
-.h-\[535px\] {
-  height: 535px;
+.h-\[840px\] {
+  height: 840px;
 }
 
-.h-\[540px\] {
-  height: 540px;
+.h-\[1040px\] {
+  height: 1040px;
 }
 
-.w-1\/2 {
-  width: 50%;
+.h-\[600px\] {
+  height: 600px;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
+.h-11 {
+  height: 2.75rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-\[19px\] {
+  height: 19px;
+}
+
+.h-\[30px\] {
+  height: 30px;
+}
+
+.h-\[50px\] {
+  height: 50px;
+}
+
+.h-\[90px\] {
+  height: 90px;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
+.h-\[75px\] {
+  height: 75px;
+}
+
+.h-\[70px\] {
+  height: 70px;
+}
+
+.h-\[475px\] {
+  height: 475px;
+}
+
+.h-\[375px\] {
+  height: 375px;
+}
+
+.h-\[450px\] {
+  height: 450px;
+}
+
+.h-\[451px\] {
+  height: 451px;
+}
+
+.h-\[452px\] {
+  height: 452px;
+}
+
+.h-\[453px\] {
+  height: 453px;
 }
 
 .w-1\/4 {
@@ -815,20 +766,16 @@ video {
   width: 75%;
 }
 
-.w-64 {
-  width: 16rem;
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
-.basis-1\/4 {
-  flex-basis: 25%;
+.w-96 {
+  width: 24rem;
 }
 
 .cursor-pointer {
@@ -839,10 +786,6 @@ video {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-cols-6 {
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
 .flex-col {
   flex-direction: column;
 }
@@ -851,20 +794,12 @@ video {
   flex-wrap: wrap;
 }
 
-.place-content-stretch {
-  place-content: stretch;
-}
-
 .items-center {
   align-items: center;
 }
 
 .justify-center {
   justify-content: center;
-}
-
-.gap-0 {
-  gap: 0px;
 }
 
 .gap-4 {
@@ -893,10 +828,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.rounded-full {
-  border-radius: 9999px;
 }
 
 .rounded-lg {
@@ -931,18 +862,9 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-zinc-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 250 250 / var(--tw-bg-opacity, 1));
-}
-
-.bg-zinc-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
 }
 
 .object-cover {
@@ -955,16 +877,8 @@ video {
      object-position: top;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-4 {
   padding: 1rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
 }
 
 .px-3 {
@@ -982,10 +896,6 @@ video {
   padding-bottom: 1rem;
 }
 
-.pt-9 {
-  padding-top: 2.25rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -993,11 +903,6 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .text-lg {
@@ -1008,6 +913,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1022,17 +932,14 @@ video {
   font-weight: 600;
 }
 
-.uppercase {
-  text-transform: uppercase;
-}
-
-.leading-normal {
-  line-height: 1.5;
-}
-
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-700 {
@@ -1055,58 +962,18 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
-.text-slate-700 {
-  --tw-text-opacity: 1;
-  color: rgb(51 65 85 / var(--tw-text-opacity, 1));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
-}
-
-.underline {
-  text-decoration-line: underline;
 }
 
 .opacity-70 {
   opacity: 0.7;
 }
 
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.duration-150 {
-  transition-duration: 150ms;
-}
-
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.hover\:bg-neutral-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-slate-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:text-slate-900:hover {
-  --tw-text-opacity: 1;
-  color: rgb(15 23 42 / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-blue-400:hover {
@@ -1119,25 +986,14 @@ video {
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
 }
 
-.hover\:text-blue-700:hover {
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity, 1));
-}
-
 .hover\:text-pink-500:hover {
   --tw-text-opacity: 1;
   color: rgb(236 72 153 / var(--tw-text-opacity, 1));
 }
 
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.focus\:ring-0:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+.hover\:text-slate-900:hover {
+  --tw-text-opacity: 1;
+  color: rgb(15 23 42 / var(--tw-text-opacity, 1));
 }
 
 .focus\:ring-blue-300:focus {
@@ -1170,12 +1026,4 @@ video {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity, 1));
   }
-}
-
-.\[\&\>svg\]\:h-5>svg {
-  height: 1.25rem;
-}
-
-.\[\&\>svg\]\:w-5>svg {
-  width: 1.25rem;
 }
