--- a/src/output.css
+++ b/src/output.css
@@ -584,10 +584,6 @@ video {
   position: fixed;
 }
 
-.relative {
-  position: relative;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
@@ -600,20 +596,13 @@ video {
   top: 0px;
 }
 
-.top-\[50px\] {
-  top: 50px;
-}
-
-.top-\[64px\] {
-  top: 64px;
-}
-
 .z-10 {
   z-index: 10;
 }
 
-.z-20 {
-  z-index: 20;
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .my-6 {
@@ -638,12 +627,20 @@ video {
   margin-bottom: 2rem;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
 
 .grid {
   display: grid;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-5 {
@@ -654,12 +651,16 @@ video {
   height: 16rem;
 }
 
+.h-\[453px\] {
+  height: 453px;
+}
+
 .h-\[540px\] {
   height: 540px;
 }
 
-.h-\[575px\] {
-  height: 575px;
+.h-\[70px\] {
+  height: 70px;
 }
 
 .h-auto {
@@ -670,92 +671,8 @@ video {
   height: 100%;
 }
 
-.h-\[640px\] {
-  height: 640px;
-}
-
-.h-\[740px\] {
-  height: 740px;
-}
-
-.h-\[840px\] {
-  height: 840px;
-}
-
-.h-\[1040px\] {
-  height: 1040px;
-}
-
-.h-\[600px\] {
-  height: 600px;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-11 {
-  height: 2.75rem;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.h-\[19px\] {
-  height: 19px;
-}
-
-.h-\[30px\] {
-  height: 30px;
-}
-
-.h-\[50px\] {
-  height: 50px;
-}
-
-.h-\[90px\] {
-  height: 90px;
-}
-
-.h-\[80px\] {
-  height: 80px;
-}
-
-.h-\[75px\] {
-  height: 75px;
-}
-
-.h-\[70px\] {
-  height: 70px;
-}
-
-.h-\[475px\] {
-  height: 475px;
-}
-
-.h-\[375px\] {
-  height: 375px;
-}
-
-.h-\[450px\] {
-  height: 450px;
-}
-
-.h-\[451px\] {
-  height: 451px;
-}
-
-.h-\[452px\] {
-  height: 452px;
-}
-
-.h-\[453px\] {
-  height: 453px;
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-1\/4 {
@@ -774,8 +691,8 @@ video {
   width: 100%;
 }
 
-.w-96 {
-  width: 24rem;
+.max-w-4xl {
+  max-width: 56rem;
 }
 
 .cursor-pointer {
@@ -857,6 +774,11 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1));
 }
 
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1));
+}
+
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
@@ -881,6 +803,14 @@ video {
   padding: 1rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -898,6 +828,11 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -942,9 +877,9 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-700 {
+.text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
 
 .text-green-500 {
@@ -969,6 +904,16 @@ video {
 
 .opacity-70 {
   opacity: 0.7;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .hover\:bg-slate-100:hover {
