--- a/src/output.css
+++ b/src/output.css
@@ -707,6 +707,50 @@ video {
   height: 25%;
 }
 
+.h-\[158px\] {
+  height: 158px;
+}
+
+.h-\[110px\] {
+  height: 110px;
+}
+
+.h-\[180px\] {
+  height: 180px;
+}
+
+.h-\[190px\] {
+  height: 190px;
+}
+
+.h-\[210px\] {
+  height: 210px;
+}
+
+.h-\[280px\] {
+  height: 280px;
+}
+
+.h-\[1000px\] {
+  height: 1000px;
+}
+
+.h-\[900px\] {
+  height: 900px;
+}
+
+.h-\[800px\] {
+  height: 800px;
+}
+
+.h-\[700px\] {
+  height: 700px;
+}
+
+.h-\[600px\] {
+  height: 600px;
+}
+
 .w-1\/2 {
   width: 50%;
 }
