maj du js pour changer la couleur de la seconde peau

--- a/src/output.css
+++ b/src/output.css
@@ -584,6 +584,10 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -594,6 +598,18 @@ video {
 
 .top-0 {
   top: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.right-1 {
+  right: 0.25rem;
 }
 
 .z-10 {
